--- a/netlify.toml
+++ b/netlify.toml
@@ -1,2 +1,2 @@
 [template.environment]
-  API_KEY = "Your Prismic API access token"
+  API_KEY = "MC5YN3A0SlJJQUFDQUFFOGIt.TO-_ve-_ve-_vQZp77-9WQkQbe-_ve-_vSjvv70HZ--_vSfvv70E77-9YO-_ve-_ve-_vWRU77-9Wu-_vSI"
